--- a/3.html
+++ b/3.html
@@ -7,7 +7,9 @@
 <meta charset="utf-8">
 </head>
 
-
+<p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 <<body>
   <h1><a href="index.html">21세기 출판과 블록체인</a></h1>
 
@@ -31,9 +33,46 @@
 이렇게 출판에서는 지식과 수요의 미스매치가 일어나고 있는데, 그 이유는 책을 '대량생산 공산품'으로 환원하려는 20세기 관습에서 벗어나지 못하는 탓이 상당히 크다.<br><br>
 <h4>그것은 또한 종이책의 원죄이기도 하다</h4>
 <p/>
+
 <img src="book fantasy.jpg" width ="50%"">
 <p>
 이런 모순들을 해결하기 위해서 블록체인 기술을 활용할 수 있다.
 </p>
 <h5><a href="https://boldbooks.com/no/articles/what-blockchain-means-to-authors" target=_blank title="블록체인과 저자">"블록체인이 책과 저자에 미치는 영향"</a></h5>
 </body>
+
+<p>
+  <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://blcokchain-book.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
+
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5ea1367769e9320caac679c3/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
